[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/boss2-outline.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_boss2_child.gd" type="Script" id=2]
[ext_resource path="res://sprites/boss2.png" type="Texture" id=3]
[ext_resource path="res://etc/scenestakeDmg.tres" type="Animation" id=5]
[ext_resource path="res://scenes/killparticles.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/robot_sound.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/robot_spawn.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/spawn_particles.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 1, 0.890196, 0.678431 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.00444, 7.72128 )

[sub_resource type="CircleShape2D" id=4]
radius = 870.538

[sub_resource type="CircleShape2D" id=5]
radius = 12.6531

[node name="enemy_swarm" type="KinematicBody2D" groups=[
"attackable",
]]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -11.0701
margin_top = -11.0702
margin_right = 39.9299
margin_bottom = 39.9298
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_right = 22.0
margin_bottom = 4.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 3 )
disabled = true

[node name="outline" type="Sprite" parent="."]
scale = Vector2( 0.62, 0.62 )
texture = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="collisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisionArea"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.6
anims/scenestakeDmg = ExtResource( 5 )
anims/takeDmg = ExtResource( 5 )

[node name="CPUParticles2D" parent="." instance=ExtResource( 9 )]

[node name="explosion" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 2.28189 )
scale = Vector2( 0.6, 0.6 )

[node name="Button" type="Button" parent="."]
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
attenuation = 2.21914
[connection signal="body_entered" from="collisionArea" to="." method="_on_collisionArea_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
